--- a/mongodb/manifest.yaml
+++ b/mongodb/manifest.yaml
@@ -27,3 +27,13 @@ spec:
       containers:
       - name: mongodb
         image: joindevops/mongodb:v1
+      readinessProbe:
+        tcpSocket:
+          port: 27017
+        initialDelaySeconds: 10
+        periodSeconds: 10
+      livenessProbe:
+        tcpSocket:
+          port: 27017
+        initialDelaySeconds: 10
+        periodSeconds: 10
