--- a/cart/manifest.yaml
+++ b/cart/manifest.yaml
@@ -1,41 +1,42 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: catalogue
+  name: cart
 data:
-  MONGO: "true"
-  MONGO_URL: "mongodb://mongodb:27017/catalogue"
+  REDIS_HOST: "redis"
+  CATALOGUE_HOST: "catalogue"
+  CATALOGUE_PORT: "8080"
 ---
 apiVersion: v1
 kind: Deployment
 metadata: 
-  name: catalogue
+  name: cart
   namespace: roboshop
   labels:
-    component: catalogue
+    component: cart
     project: roboshop
     tier: backend
 spec:
   replicas: 1
   selector:
     matchLables:
-      component: catalogue
+      component: cart
       project: roboshop
       tier: backend
   template:
     metadata:
       labels:
-        component: catalogue
+        component: cart
         project: roboshop
         tier: backend
     spec:
       containers:
-      - name: catalogue
-        image: joindevops/catalogue:v1
+      - name: cart
+        image: joindevops/cart:v1
         imagePullPolicy: Always
         envForm:
           configMapRef:
-            name: catalogue
+            name: cart
         ports:
         - name: liveness-port
           containerPort: 8080
@@ -52,14 +53,15 @@ spec:
             port: liveness-port
           failureThreshold: 1
           periodSeconds: 60
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: catalogue
+  name: cart
 spec:
   selector:
-    component: catalogue
+    component: cart
     project: roboshop
     tier: backend 
   ports:
