--- a/payment/manifest.yaml
+++ b/payment/manifest.yaml
@@ -1,41 +1,46 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: catalogue
+  name: payment
 data:
-  MONGO: "true"
-  MONGO_URL: "mongodb://mongodb:27017/catalogue"
+  CART_HOST: "cart"
+  CART_PORT: "8080"
+  USER_HOST: "user"
+  USER_PORT: "8080"
+  AMQP_HOST: "rabbitmq"
+  AMQP_USER: "roboshop"
+  AMQP_PASS: "roboshop123"
 ---
 apiVersion: v1
 kind: Deployment
 metadata: 
-  name: catalogue
+  name: payment
   namespace: roboshop
   labels:
-    component: catalogue
+    component: payment
     project: roboshop
     tier: backend
 spec:
   replicas: 1
   selector:
     matchLables:
-      component: catalogue
+      component: payment
       project: roboshop
       tier: backend
   template:
     metadata:
       labels:
-        component: catalogue
+        component: payment
         project: roboshop
         tier: backend
     spec:
       containers:
-      - name: catalogue
-        image: joindevops/catalogue:v1
+      - name: payment
+        image: joindevops/payment:v1
         imagePullPolicy: Always
         envForm:
           configMapRef:
-            name: catalogue
+            name: payment
         ports:
         - name: liveness-port
           containerPort: 8080
@@ -56,10 +61,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: catalogue
+  name: payment
 spec:
   selector:
-    component: catalogue
+    component: payment
     project: roboshop
     tier: backend 
   ports:
