--- a/rabbitmq/manifest.yaml
+++ b/rabbitmq/manifest.yaml
@@ -1,11 +1,11 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mongodb
+  name: rabbitmq
   namespace: roboshop
   # these labels are replica set labels
   labels:
-  component: mongodb
+  component: rabbitmq
   tier: db
   project: roboshop
 spec:
@@ -13,29 +13,34 @@ spec:
   selector:
     # these labels are used to select pods
     matchLables:
-      component: mongodb
+      component: rabbitmq
       tier: db
       project: roboshop
   # pod definition
   template:
     metadata:
       labels:
-        component: mongodb
+        component: rabbitmq
         tier: db
         project: roboshop
     spec: 
       containers:
-      - name: mongodb
-        image: joindevops/mongodb:v1
+      - name: rabbitmq
+        image: rabbitmq:3
         imagePullPolicy: Always
+        envForm:
+        - name: RABBITMQ_DEFAULT_USER
+          value: roboshop
+        - name: RABBITMQ_DEFAULT_PASS
+          value: roboshop123
       readinessProbe:
         tcpSocket:
-          port: 27017
+          port: 5672
         initialDelaySeconds: 10
         periodSeconds: 10
       livenessProbe:
         tcpSocket:
-          port: 27017
+          port: 5672
         initialDelaySeconds: 10
         periodSeconds: 10
 
@@ -45,7 +50,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: mongodb
+  name: rabbitmq
 spec:
   selector:
     project: roboshop
@@ -53,5 +58,5 @@ spec:
     tier: db
   ports:
     - protocal: TCP
-      port: 27017 #service port
-      targetPort: 27017 #container port
+      port: 5672 #service port
+      targetPort: 5672 #container port
