--- a/redis/manifest.yaml
+++ b/redis/manifest.yaml
@@ -1,11 +1,11 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mongodb
+  name: redis
   namespace: roboshop
   # these labels are replica set labels
   labels:
-  component: mongodb
+  component: redis
   tier: db
   project: roboshop
 spec:
@@ -13,29 +13,29 @@ spec:
   selector:
     # these labels are used to select pods
     matchLables:
-      component: mongodb
+      component: redis
       tier: db
       project: roboshop
   # pod definition
   template:
     metadata:
       labels:
-        component: mongodb
+        component: redis
         tier: db
         project: roboshop
     spec: 
       containers:
-      - name: mongodb
-        image: joindevops/mongodb:v1
+      - name: redis
+        image: redis:7.0
         imagePullPolicy: Always
       readinessProbe:
         tcpSocket:
-          port: 27017
+          port: 6379
         initialDelaySeconds: 10
         periodSeconds: 10
       livenessProbe:
         tcpSocket:
-          port: 27017
+          port: 6379
         initialDelaySeconds: 10
         periodSeconds: 10
 
@@ -45,7 +45,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: mongodb
+  name: redis
 spec:
   selector:
     project: roboshop
@@ -53,5 +53,5 @@ spec:
     tier: db
   ports:
     - protocal: TCP
-      port: 27017 #service port
-      targetPort: 27017 #container port
+      port: 6379 #service port
+      targetPort: 6379 #container port
