--- a/shipping/manifest.yaml
+++ b/shipping/manifest.yaml
@@ -1,41 +1,41 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: catalogue
+  name: shipping
 data:
-  MONGO: "true"
-  MONGO_URL: "mongodb://mongodb:27017/catalogue"
+  CART_ENDPOINT: "cart:8080"
+  DB_HOST: "mysql"
 ---
 apiVersion: v1
 kind: Deployment
 metadata: 
-  name: catalogue
+  name: shipping
   namespace: roboshop
   labels:
-    component: catalogue
+    component: shipping
     project: roboshop
     tier: backend
 spec:
   replicas: 1
   selector:
     matchLables:
-      component: catalogue
+      component: shipping
       project: roboshop
       tier: backend
   template:
     metadata:
       labels:
-        component: catalogue
+        component: shipping
         project: roboshop
         tier: backend
     spec:
       containers:
-      - name: catalogue
-        image: joindevops/catalogue:v1
+      - name: shipping
+        image: joindevops/shipping:v1
         imagePullPolicy: Always
         envForm:
           configMapRef:
-            name: catalogue
+            name: shipping
         ports:
         - name: liveness-port
           containerPort: 8080
@@ -56,10 +56,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: catalogue
+  name: shipping
 spec:
   selector:
-    component: catalogue
+    component: shipping
     project: roboshop
     tier: backend 
   ports:
