--- a/user/manifest.yaml
+++ b/user/manifest.yaml
@@ -1,41 +1,42 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: catalogue
+  name: user
 data:
   MONGO: "true"
-  MONGO_URL: "mongodb://mongodb:27017/catalogue"
+  MONGO_URL: "mongodb://mongodb:27017/user"
+  REDIS_URL: "redis://redis:6379"
 ---
 apiVersion: v1
 kind: Deployment
 metadata: 
-  name: catalogue
+  name: user
   namespace: roboshop
   labels:
-    component: catalogue
+    component: user
     project: roboshop
     tier: backend
 spec:
   replicas: 1
   selector:
     matchLables:
-      component: catalogue
+      component: user
       project: roboshop
       tier: backend
   template:
     metadata:
       labels:
-        component: catalogue
+        component: user
         project: roboshop
         tier: backend
     spec:
       containers:
-      - name: catalogue
-        image: joindevops/catalogue:v1
+      - name: user
+        image: joindevops/user:v1
         imagePullPolicy: Always
         envForm:
           configMapRef:
-            name: catalogue
+            name: user
         ports:
         - name: liveness-port
           containerPort: 8080
@@ -52,14 +53,15 @@ spec:
             port: liveness-port
           failureThreshold: 1
           periodSeconds: 60
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: catalogue
+  name: user
 spec:
   selector:
-    component: catalogue
+    component: user
     project: roboshop
     tier: backend 
   ports:
