--- a/catalogue/manifest.yaml
+++ b/catalogue/manifest.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: catalogue
+  namespace: roboshop
 data:
   MONGO: "true"
   MONGO_URL: "mongodb://mongodb:27017/catalogue"
@@ -57,6 +58,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: catalogue
+  namespace: roboshop
 spec:
   selector:
     component: catalogue
