--- a/payment/manifest.yaml
+++ b/payment/manifest.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: payment
+  namespace: roboshop
 data:
   CART_HOST: "cart"
   CART_PORT: "8080"
@@ -62,6 +63,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: payment
+  namespace: roboshop
 spec:
   selector:
     component: payment
