--- a/shipping/manifest.yaml
+++ b/shipping/manifest.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: shipping
+  namespace: roboshop
 data:
   CART_ENDPOINT: "cart:8080"
   DB_HOST: "mysql"
@@ -57,6 +58,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: shipping
+  namespace: roboshop
 spec:
   selector:
     component: shipping
