--- a/user/manifest.yaml
+++ b/user/manifest.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: user
+  namespace: roboshop
 data:
   MONGO: "true"
   MONGO_URL: "mongodb://mongodb:27017/user"
@@ -59,6 +60,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: user
+  namespace: roboshop
 spec:
   selector:
     component: user
