--- a/mysql/manifest.yaml
+++ b/mysql/manifest.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: ConfigMap
-metadata: 
+metadata:
   name: mysql
   namespace: roboshop
 data:
@@ -13,27 +13,27 @@ kind: Deployment
 metadata:
   name: mysql
   namespace: roboshop
-  # these labels are replica set labels
+  # these are replica set labels
   labels:
-  component: mysql
-  tier: db
-  project: roboshop
+    project: roboshop
+    component: mysql
+    tier: db
 spec:
   replicas: 1
   selector:
     # these labels are used to select pods
-    matchLables:
+    matchLabels:
+      project: roboshop
       component: mysql
       tier: db
-      project: roboshop
   # pod definition
   template:
     metadata:
       labels:
+        project: roboshop
         component: mysql
         tier: db
-        project: roboshop
-    spec: 
+    spec:
       containers:
       - name: mysql
         image: joindevops/mysql:v1
@@ -46,21 +46,18 @@ spec:
         # livenessProbe:
         #   tcpSocket:
         #     port: 3306
-        #   initialDelaySeconds: 10
-        #   periodSeconds: 10
+        #   initialDelaySeconds: 20
+        #   periodSeconds: 5
         volumeMounts:
         - name: mysql-config
           mountPath: /etc/mysql/conf.d/my.cnf
           subPath: my.cnf
-      
+
       volumes:
-      - name: mysql-config 
-        configMap:
-          name: mysql
-
+        - name: mysql-config
+          configMap:
+            name: mysql
 ---
-#service
-
 apiVersion: v1
 kind: Service
 metadata:
@@ -69,9 +66,9 @@ metadata:
 spec:
   selector:
     project: roboshop
-    component: frontend
+    component: mysql
     tier: db
   ports:
-    - protocal: TCP
-      port: 3306 #service port
-      targetPort: 3306 #container port
+    - protocol: TCP
+      port: 3306 # service port
+      targetPort: 3306 # container port
