--- a/redis/manifest.yaml
+++ b/redis/manifest.yaml
@@ -50,7 +50,7 @@ metadata:
 spec:
   selector:
     project: roboshop
-    component: frontend
+    component: redis
     tier: db
   ports:
     - protocal: TCP
