--- a/rabbitmq/manifest.yaml
+++ b/rabbitmq/manifest.yaml
@@ -1,53 +1,49 @@
 apiVersion: apps/v1
-
 kind: Deployment
 metadata:
   name: rabbitmq
   namespace: roboshop
-  # these labels are replica set labels
+  # these are replica set labels
   labels:
+    project: roboshop
     component: rabbitmq
     tier: db
-    project: roboshop
 spec:
   replicas: 1
   selector:
     # these labels are used to select pods
-    matchLables:
+    matchLabels:
+      project: roboshop
       component: rabbitmq
       tier: db
-      project: roboshop
   # pod definition
   template:
     metadata:
       labels:
+        project: roboshop
         component: rabbitmq
         tier: db
-        project: roboshop
-    spec: 
+    spec:
       containers:
       - name: rabbitmq
         image: rabbitmq:3
-        imagePullPolicy: Always
-        envForm:
+        env:
         - name: RABBITMQ_DEFAULT_USER
           value: roboshop
         - name: RABBITMQ_DEFAULT_PASS
           value: roboshop123
+        imagePullPolicy: Always
         readinessProbe:
           tcpSocket:
             port: 5672
-          initialDelaySeconds: 10
+          initialDelaySeconds: 15
           periodSeconds: 10
         livenessProbe:
           tcpSocket:
             port: 5672
-          initialDelaySeconds: 10
-          periodSeconds: 10
-
+          initialDelaySeconds: 20
+          periodSeconds: 5
 ---
-#service
-
 apiVersion: v1
 kind: Service
 metadata:
@@ -55,10 +51,10 @@ metadata:
   namespace: roboshop
 spec:
   selector:
+    project: roboshop
     component: rabbitmq
     tier: db
-    project: roboshop
   ports:
-    - protocal: TCP
-      port: 5672 #service port
-      targetPort: 5672 #container port
+    - protocol: TCP
+      port: 5672 # service port
+      targetPort: 5672 # container port
