--- a/catalogue/manifest.yaml
+++ b/catalogue/manifest.yaml
@@ -7,7 +7,7 @@ data:
   MONGO: "true"
   MONGO_URL: "mongodb://mongodb:27017/catalogue"
 ---
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata: 
   name: catalogue
