--- a/catalogue/manifest.yaml
+++ b/catalogue/manifest.yaml
@@ -19,7 +19,7 @@ metadata:
 spec:
   replicas: 1
   selector:
-    matchLables:
+    matchLabels:
       component: catalogue
       project: roboshop
       tier: backend
