--- a/catalogue/manifest.yaml
+++ b/catalogue/manifest.yaml
@@ -34,7 +34,7 @@ spec:
       - name: catalogue
         image: joindevops/catalogue:v1
         imagePullPolicy: Always
-        envForm:
+        envFrom:
         - configMapRef:
           name: catalogue
         ports:
