--- a/catalogue/manifest.yaml
+++ b/catalogue/manifest.yaml
@@ -65,6 +65,6 @@ spec:
     project: roboshop
     tier: backend 
   ports:
-    - protocal: TCP
+    - protocol: TCP
       port: 8080 #service port
       targetPort: 8080 #container port
