--- a/payment/manifest.yaml
+++ b/payment/manifest.yaml
@@ -24,7 +24,7 @@ metadata:
 spec:
   replicas: 1
   selector:
-    matchLables:
+    matchLabels:
       component: payment
       project: roboshop
       tier: backend
@@ -40,7 +40,7 @@ spec:
         image: joindevops/payment:v1
         imagePullPolicy: Always
         envForm:
-          configMapRef:
+        - configMapRef:
             name: payment
         ports:
         - name: liveness-port
@@ -70,6 +70,6 @@ spec:
     project: roboshop
     tier: backend 
   ports:
-    - protocal: TCP
+    - protocol: TCP
       port: 8080 #service port
       targetPort: 8080 #container port
