--- a/user/manifest.yaml
+++ b/user/manifest.yaml
@@ -8,7 +8,7 @@ data:
   MONGO_URL: "mongodb://mongodb:27017/user"
   REDIS_URL: "redis://redis:6379"
 ---
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata: 
   name: user
@@ -20,7 +20,7 @@ metadata:
 spec:
   replicas: 1
   selector:
-    matchLables:
+    matchLabels:
       component: user
       project: roboshop
       tier: backend
@@ -36,7 +36,7 @@ spec:
         image: joindevops/user:v1
         imagePullPolicy: Always
         envForm:
-          configMapRef:
+        - configMapRef:
             name: user
         ports:
         - name: liveness-port
@@ -67,6 +67,6 @@ spec:
     project: roboshop
     tier: backend 
   ports:
-    - protocal: TCP
+    - protocol: TCP
       port: 8080 #service port
       targetPort: 8080 #container port
