--- a/debug/manifest.yaml
+++ b/debug/manifest.yaml
@@ -9,5 +9,5 @@ metadata:
 spec:
  containers:
  - name: debug
-   image: joindevops/debug:v1
+   image: sivagopi4717/debug:v1
    imagePullPolicy: Always
