--- a/payment/manifest.yaml
+++ b/payment/manifest.yaml
@@ -39,7 +39,7 @@ spec:
       - name: payment
         image: joindevops/payment:v1
         imagePullPolicy: Always
-        envForm:
+        envFrom:
         - configMapRef:
             name: payment
         ports:
