--- a/payment/manifest.yaml
+++ b/payment/manifest.yaml
@@ -12,7 +12,7 @@ data:
   AMQP_USER: "roboshop"
   AMQP_PASS: "roboshop123"
 ---
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata: 
   name: payment
