--- a/frontend/manifest.yaml
+++ b/frontend/manifest.yaml
@@ -56,6 +56,6 @@ spec:
     component: frontend
     tier: frontend
   ports:
-    - protocal: TCP
+    - protocol: TCP
       port: 80 #service port
       targetPort: 80 #container port
